force-app/main/default/objects/Opportunity/fields/Converted_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Converted_Engagement__c</fullName>
    <label>Converted Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>