force-app/main/default/objects/Opportunity/fields/Delivery_Model__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Model__c</fullName>
    <label>Delivery Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>