force-app/main/default/objects/Opportunity/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <label>Dependencies</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>