force-app/main/default/objects/Opportunity/fields/Estimated_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Timeline__c</fullName>
    <label>Estimated Timeline</label>
    <type>Text</type>
    <length>255</length>
</CustomField>