force-app/main/default/objects/Opportunity/fields/Primary_Service__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service__c</fullName>
    <label>Primary Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>